new file:   images/Langlaufen.png 	new file:   images/Skien.png 	new file:   images/Snowboarden.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -27,22 +27,28 @@
             </div> 
         </div>
 
-        <p><b>Regeln und Fristen</b></p>
+        <p><b>Wintersportarten</b></p>
 
         <div class="RegelContainer">
 
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Anmeldeschluss zur Eintragung eines Teams <br> <br> <b>07.10.2024</b></p>
-            </div>
-
-            <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Das erste Team kostet <br> <br> <b>10€</b> <br><br><br> jedes weitere derselben Klasse <br> <br> <b>5€</b></p>
-            </div>
-
-            <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Stollenschuhe mit Schraubstollen sind <b>verboten!</b></p>
+                <p style="text-align: center; color: #000000;">Ski</p>
                 <div class="image-container">
-                    <img src="images/images_1.png" alt="Uhr" style="height: 100%; width: 100%;">
+                    <img src="images/Skien.png" alt="Uhr" style="height: 100%; width: 100%;">
+                </div>
+            </div>
+
+            <div class="RegelBox">
+                <p style="text-align: center; color: #000000;">Snowboard</p>
+                <div class="image-container">
+                    <img src="images/Snowboarden.png" alt="Uhr" style="height: 100%; width: 100%;">
+                </div>
+            </div>
+
+            <div class="RegelBox">
+                <p style="text-align: center; color: #000000;">Langlauf</p>
+                <div class="image-container">
+                    <img src="images/Langlaufen.png" alt="Uhr" style="height: 100%; width: 100%;">
                 </div>
             </div>
         </div>
@@ -51,7 +57,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.65rem;"></p>
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.65rem;"><b>!Wichtig!</b><br>Die Ausrüstung ist selbst zu organisieren und nur für geübte Wintersportler*innen</p>
             </div> 
         </div>
 
@@ -61,13 +67,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 5%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;"></p>
-            </div> 
-        </div>
-
-        <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
-            <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;">Mit der <b>Anmeldung zum Sportturnier</b> erklären sich <b>alle Teilnehmenden damit einverstanden</b>, dass während der Veranstaltung <b></b>Foto- und Videoaufnahmen gemacht werden. Diese <b>Aufnahmen</b> dürfen <b>für</b> die <b>Berichterstattung und Veröffentlichung</b> auf <b>verschiedenen Plattformen</b> genutzt werden.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Ohne Zahlung der geforderten Summe ist die Anmeldung ungültig!</p>
             </div> 
         </div>
 
@@ -75,7 +75,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;"></p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Preis: <b>55€</b> (inkl. Bus und Liftpass)<br>Die Abgabe verfolgt <b>unverzüglich</b> vor oder nach der Anmeldung bei Herr Stephan!</p>
             </div> 
         </div>
 
@@ -83,7 +83,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Der Skitag</b> findet am <b>12.02.2025</b>statt. <br>Abfahrt Nürtingen: 06:15 Uhr <br>Abfahrt Fellhorn: 15:45 Uhr <br>Ankunft Nürtingen vsl. 19:00 Uhr</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Der Skitag</b> findet am <b>12.02.2025</b>statt. <br>Abfahrt Nürtingen: <b>06:15 Uhr</b> <br>Abfahrt Fellhorn: <b>15:45 Uhr</b> <br>Ankunft Nürtingen vsl. <b>19:00 Uhr</b></p>
             </div> 
         </div>
 
