--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
             <div class="RegelBox">
                 <p style="text-align: center; color: #000000;">Ski</p>
                 <div class="image-container">
-                    <img src="images/Skien.png" alt="Uhr" style="height: 100%; width: 100%;">
+                    <img src="images/Skien.png" alt="Uhr" style="height: 100%; width: 100%; margin-bottom: 5%;">
                 </div>
             </div>
 
             <div class="RegelBox">
                 <p style="text-align: center; color: #000000;">Snowboard</p>
                 <div class="image-container">
-                    <img src="images/Snowboarden.png" alt="Uhr" style="height: 100%; width: 100%;">
+                    <img src="images/Snowboarden.png" alt="Uhr" style="height: 100%; width: 100%; margin-bottom: 5%;">
                 </div>
             </div>
 
             <div class="RegelBox">
                 <p style="text-align: center; color: #000000;">Langlauf</p>
                 <div class="image-container">
-                    <img src="images/Langlaufen.png" alt="Uhr" style="height: 100%; width: 100%;">
+                    <img src="images/Langlaufen.png" alt="Uhr" style="height: 100%; width: 100%; margin-bottom: 5%;">
                 </div>
             </div>
         </div>
