modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
         <div class="RegelContainer">
 
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Ski</p>
+                <p style="text-align: center; color: #000000;"><b>Ski</b></p>
                 <div class="image-container" style="margin-bottom: 5%;">
-                    <img src="images/Skien.png" alt="Uhr" style="height: 90%; width: 100%;">
+                    <img src="images/Skien.png" alt="Uhr" style="height: 90%; width: 100%; border-radius: 20px;">
                 </div>
             </div>
 
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Snowboard</p>
+                <p style="text-align: center; color: #000000;"><b>Snowboard</b></p>
                 <div class="image-container" style="margin-bottom: 5%;">
-                    <img src="images/Snowboarden.png" alt="Uhr" style="height: 90%; width: 100%;">
+                    <img src="images/Snowboarden.png" alt="Uhr" style="height: 90%; width: 100%; border-radius: 20px;">
                 </div>
             </div>
 
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Langlauf</p>
+                <p style="text-align: center; color: #000000;"><b>Langlauf</b></p>
                 <div class="image-container" style="margin-bottom: 5%;">
-                    <img src="images/Langlaufen.png" alt="Uhr" style="height: 90%; width: 100%;">
+                    <img src="images/Langlaufen.png" alt="Uhr" style="height: 90%; width: 100%; border-radius: 20px;">
                 </div>
             </div>
         </div>
