modified:   index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Preis: <b>55€</b> (inkl. Bus und Liftpass)<br>Die Abgabe verfolgt <b>unverzüglich</b> vor oder nach der Anmeldung bei Herr Stephan!</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Preis: <b>55€</b> (inkl. Bus und Liftpass)<br>Die Abgabe verfolgt <b>unverzüglich</b> vor oder nach der Anmeldung an dieses PayPal-Konto: <b>HIER KONTO</b> !</p>
             </div> 
         </div>
 
